vectorize-report.txt
reference.cpp: In function ‘void processUpdateIndexTask(uint32_t, uint32_t, void*)’:
reference.cpp:960:28: warning: pointer of type ‘void *’ used in arithmetic [-Wpointer-arith]
                 valuesptr[i] = tpls[i][col];
                            ^
reference.cpp:960:28: error: ‘void*’ is not a pointer-to-object type
reference.cpp:961:28: warning: pointer of type ‘void *’ used in arithmetic [-Wpointer-arith]
                 tuplesptr[i] = tpls[i];
                            ^
reference.cpp:961:28: error: ‘void*’ is not a pointer-to-object type
In file included from include/cpp_btree/btree_map.h:31:0,
                 from reference.cpp:71:
include/cpp_btree/btree.h: In instantiation of ‘btree::btree_node<Params>::reference btree::btree_node<Params>::value(int) [with Params = btree::btree_map_params<unsigned int, std::pair<long unsigned int, long unsigned int*>, std::less<unsigned int>, std::allocator<std::pair<const unsigned int, std::pair<long unsigned int, long unsigned int*> > >, 256>; btree::btree_node<Params>::reference = std::pair<const unsigned int, std::pair<long unsigned int, long unsigned int*> >&]’:
include/cpp_btree/btree.h:809:12:   required from ‘btree::btree_iterator<Node, Reference, Pointer>::pointer btree::btree_iterator<Node, Reference, Pointer>::operator->() const [with Node = btree::btree_node<btree::btree_map_params<unsigned int, std::pair<long unsigned int, long unsigned int*>, std::less<unsigned int>, std::allocator<std::pair<const unsigned int, std::pair<long unsigned int, long unsigned int*> > >, 256> >; Reference = std::pair<const unsigned int, std::pair<long unsigned int, long unsigned int*> >&; Pointer = std::pair<const unsigned int, std::pair<long unsigned int, long unsigned int*> >*; btree::btree_iterator<Node, Reference, Pointer>::pointer = std::pair<const unsigned int, std::pair<long unsigned int, long unsigned int*> >*]’
reference.cpp:888:48:   required from here
include/cpp_btree/btree.h:557:57: warning: dereferencing type-punned pointer will break strict-aliasing rules [-Wstrict-aliasing]
     return reinterpret_cast<reference>(fields_.values[i]);
                                                         ^
make: *** [reference] Error 1
./run.sh: line 7: /home/lambros/dev/sigmod2015/src/reference: No such file or directory
